--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -474,8 +474,7 @@
                         <div class="button-row canter">
                             <a class="button" routerLink="/book-session">Let’s talk</a>
                         </div>
-                        <div class="step"><small>All queries are replied within
-                                <u>24hrs</u>.</small></div>
+                        <div class="step"><small><a routerLink="/book-session">Book a Session</a></small></div>
                     </div>
 
                 </div>
@@ -530,8 +529,7 @@
                         <div class="button-row canter">
                             <a class="button" routerLink="/book-session">Let’s talk</a>
                         </div>
-                        <div class="step"><small>All queries are replied within
-                                <u>24hrs</u>.</small></div>
+                        <div class="step"><small><a  routerLink="/book-section">Book a Session</a> </small></div>
                     </div>
 
 
