--- a/src/app/layout/worst-day-cycle/wdc-details/wdc-details.component.html
+++ b/src/app/layout/worst-day-cycle/wdc-details/wdc-details.component.html
@@ -30,7 +30,7 @@
                                 <img src="images/8.jpeg" loading="lazy" alt="Contact">
 
                                 <div class="img-contant">
-                                    <h5>Have you any questio</h5>
+                                    <h5>Have you any question</h5>
                                     <p>Don't waste your time call us!</p>
                                     <p><strong>Contact today!</strong></p>
                                     <div class="button-row">
