--- a/src/app/layout/blog/blog.component.html
+++ b/src/app/layout/blog/blog.component.html
@@ -88,13 +88,12 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="sidebar-widget-two about-widget">
+                            <!-- <div class="sidebar-widget-two about-widget">
                                 <div class="widget-content">
                                     <div class="sidebar-title-two">
                                         <h5>Search Here</h5>
                                     </div>
 
-                                    <!-- Search -->
                                     <div class="sidebar-widget search-box">
                                         <form method="post" action="contact.html">
                                             <div class="form-group">
@@ -106,70 +105,26 @@
                                     </div>
 
                                 </div>
-                            </div>
-                            <!-- <div class="sidebar-widget-two popular-posts">
-                                <div class="widget-content"> 
-                                    <div class="sidebar-title-two">
-                                        <h5>Popular Feeds</h5>
-                                    </div>
-
-                                    <article class="post">
-                                        <figure class="post-thumb"><img src="images/Have-You-Experienced.webp" loading="lazy" alt=""><a
-                                                href="#" class="overlay-box"><span class="icon fa fa-link"></span></a>
-                                        </figure>
-                                        <div class="contentrifgty">
-                                            <div class="text"><a href="#">In today’s Best Day Blog article...</a>
-                                            </div>
-                                            <div class="post-info">24th March 2022</div>
-                                        </div>
-                                    </article>
-
-                                    <article class="post">
-                                        <figure class="post-thumb"><img src="images/codependency.webp" loading="lazy" alt=""><a
-                                                href="#" class="overlay-box"><span class="icon fa fa-link"></span></a>
-                                        </figure>
-                                        <div class="contentrifgty">
-                                            <div class="text"><a href="#">The Two Types Of Codependents</a>
-                                            </div>
-                                            <div class="post-info">24th March 2022</div>
-                                        </div>
-                                    </article>
-
-                                    <article class="post">
-                                        <figure class="post-thumb"><img src="images/How-to-Keep.webp" loading="lazy" alt=""><a href="#"
-                                                class="overlay-box"><span class="icon fa fa-link"></span></a>
-                                        </figure>
-                                        <div class="contentrifgty">
-                                            <div class="text"><a href="#">How To Keep Your Boundaries In 3 Simple
-                                                    Steps</a>
-                                            </div>
-                                            <div class="post-info">24th March 2022</div>
-                                        </div>
-                                    </article>
-                                    <article class="post">
-                                        <figure class="post-thumb"><img src="images/Have-You-Experienced.webp" loading="lazy" alt=""><a
-                                                href="#" class="overlay-box"><span class="icon fa fa-link"></span></a>
-                                        </figure>
-                                        <div class="contentrifgty">
-                                            <div class="text"><a href="#">In today’s Best Day Blog article...</a>
-                                            </div>
-                                            <div class="post-info">24th March 2022</div>
-                                        </div>
-                                    </article>
-
-                                </div>
                             </div> -->
+                       
 
                             <div class="sidebar-widget-two add-widget">
-                                <div class="widget-content">
-                                    <div class="sidebar-title-two">
-                                        <h5>Sponsor Adds</h5>
+                                   <div class="contact-box">
+                                <div class="shine-effect canter-content">
+                                    <img src="images/15.jpeg" loading="lazy" alt="Contact">
+
+                                    <div class="img-contant">
+                                        <p><strong>Contact today!</strong></p>
+                                        <div class="button-row">
+                                        <a routerLink="/book-session" class="button">
+                                            book a call with Kenny <span class="arrow"><i
+                                                    class="fa-solid fa-arrow-right"></i></span>
+                                        </a>
+                                      
                                     </div>
-                                    <div class="add-image">
-                                        <img src="images/11.jpeg" loading="lazy" alt="">
-                                        <div class="add-size">270x240</div>
                                     </div>
                                 </div>
+                            </div>
                             </div>
 
                         </aside>
