--- a/src/app/layout/courses/courses-details/courses-details.component.html
+++ b/src/app/layout/courses/courses-details/courses-details.component.html
@@ -193,7 +193,7 @@
             </div>
         </section>
 
-        <section class="who-we-are bookssection">
+        <section class="who-we-are bookssection last">
             <div class="container ">
                 <div class="flex-who-we-are">
                     <!-- Left Side Images -->
