--- a/src/app/layout/resources/resources.component.html
+++ b/src/app/layout/resources/resources.component.html
@@ -191,7 +191,7 @@
                                         </div>
                                        </div>
                                        <div class="submitebut">
-                                        <button class="button resorsbutons" type="submit">Send Message</button>
+                                        <button class="button resorsbutons" type="submit">Download Now</button>
                                         </div>
                                 </form>
                             </div>
@@ -246,7 +246,7 @@
                                         </div>
                                        </div>
                                        <div class="submitebut">
-                                        <button class="button resorsbutons" type="submit">Send Message</button>
+                                        <button class="button resorsbutons" type="submit">Download Now</button>
                                         </div>
                                     </form> 
                               
@@ -292,7 +292,7 @@
                                         </div>
                                        </div>
                                        <div class="submitebut">
-                                        <button class="button resorsbutons" type="submit">Send Message</button>
+                                        <button class="button resorsbutons" type="submit">Download Now</button>
                                         </div>
                                     </form> 
                         </div>
@@ -345,7 +345,7 @@
                                         </div>
                                        </div>
                                        <div class="submitebut">
-                                        <button class="button resorsbutons" type="submit">Send Message</button>
+                                        <button class="button resorsbutons" type="submit">Download Now</button>
                                         </div>
                                 </form>
                             </div>
@@ -395,7 +395,7 @@
                                         </div>
                                        </div>
                                        <div class="submitebut">
-                                        <button class="button resorsbutons" type="submit">Send Message</button>
+                                        <button class="button resorsbutons" type="submit">Download Now</button>
                                         </div>
                                 </form>
                             </div>
@@ -448,7 +448,7 @@
                                         </div>
                                        </div>
                                        <div class="submitebut">
-                                        <button class="button resorsbutons" type="submit">Send Message</button>
+                                        <button class="button resorsbutons" type="submit">Download Now</button>
                                         </div>
                                 </form>
                             </div>
