--- a/src/app/layout/blog/blog-details/blog-details.component.html
+++ b/src/app/layout/blog/blog-details/blog-details.component.html
@@ -35,9 +35,9 @@
                                     <img src="images/15.jpeg" loading="lazy" alt="Contact">
 
                                     <div class="img-contant">
-                                        <h5>Have you any questio</h5>
-                                        <p>Don't waste your time call us!</p>
-                                        <p><strong>Contact today!</strong></p>
+                                        <h5>Have any questions?</h5>
+                                        <p>Don’t waste time—call us!</p>
+                                        <p><strong>Contact us today!</strong></p>
                                         <div class="button-row">
                                         <a routerLink="/book-session" class="button">
                                             book a call with Kenny <span class="arrow"><i
