--- a/src/app/layout/courses/courses-details/courses-details.component.html
+++ b/src/app/layout/courses/courses-details/courses-details.component.html
@@ -78,7 +78,7 @@
                         <h4>{{ service.acf?.sub_heading_1 }}</h4>
                         <div [innerHTML]="service.acf?.right_para_1"></div>
                         <div class="button-row left">
-                            <a [href]="service.acf?.right_button_link.url"
+                            <a [href]="service.acf?.right_button_link?.url"
                                 class="button mt3"> {{
                                 service.acf?.right_button_text }}</a>
                         </div>
@@ -137,7 +137,7 @@
                     </div>
  <div class="button-row">
                             <a target="_blank"
-                                [href]="service.acf?.button_link.url"
+                                [href]="service.acf?.button_link?.url"
                                 class="button mt3"> {{
                                 service.acf?.button_text}}</a>
                         </div>
@@ -159,10 +159,9 @@
                             <span class="icon"><i
                                     class="fa-solid fa-play"></i></span>
                             {{ curriculum }}
-                            <a [href]="service.acf?.right_button_link.url"
-                                class="button mt3">Start</a>
-                            <div class="button-row left">
-                            </div>
+                            <a [href]="service.acf?.right_button_link?.url"
+                                class="button ">Start</a>
+                           
                         </div>
                     </div>
                 </div>
@@ -212,7 +211,7 @@
                     <h3>What Are You Waiting For? </h3>
                     <p>Complete The Greatest Version Of Yourself by taking one
                         of our fantastic masterclasses today! </p>
-                    <a class="button whitebt" [href]="service.acf?.ready_to_take_button_link.url">Enroll Now
+                    <a class="button whitebt" [href]="service.acf?.ready_to_take_button_link?.url">Enroll Now
                         !</a>
                 </div>
             </div>
