--- a/src/app/layout/worst-day-cycle/worst-day-cycle.component.html
+++ b/src/app/layout/worst-day-cycle/worst-day-cycle.component.html
@@ -38,11 +38,11 @@
                             past so they can reclaim their authentic self.</p>
 
                         <p class="desc">Sadly, the individual will deny their part because both society and science have
-                            not made them aware of the role they are playing in creating their emotional misery.</p><br>
+                            not made them aware of the role they are playing in creating their emotional misery.</p>
 
-                        <p class="desc">Successfully conquering <span class="bolder">The Worst Day Cycle </span>
+                        <p class="desc">Successfully conquering <a class="bolder" routerLink="worst-day-cycle">The Worst Day Cycle </a>
                             requires healing the shame and
-                            facing this denial by developing <span class="bolder">Emotional Authenticity.</span>
+                            facing this denial by developing <a class="bolder" routerLink="/courses">Emotional Authenticity.</a>
 
                         </p>
 
