--- a/src/app/layout/books/books.component.html
+++ b/src/app/layout/books/books.component.html
@@ -345,7 +345,7 @@
 
 
                     <a target="_blank"
-                        routerLink="https://www.amazon.com/Your-Journey-Success-Answers-Discover/dp/1981471014/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1580748958&sr=8-1"
+                        href="https://www.amazon.com/Your-Journey-Success-Answers-Discover/dp/1981471014/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1580748958&sr=8-1"
                         class="button mt-3">Buy My Book</a>
 
 
